@@ -1,6 +1,6 @@
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
-[assembly:AssemblyVersion("@VERSION@.0.0")]
+[assembly:AssemblyVersion("@VERSION@")]
 [assembly:AssemblyDelaySign(true)]
 [assembly:AssemblyKeyFile("../gtk-sharp.pub")]
