@@ -1,5 +1,9 @@
 2004-04-30  Mike Kestner  <mkestner@ximian.com>
 
+	* */AssemblyInfo.cs.in : s/@VERSION@.0.0/@VERSION@/
+
+2004-04-30  Mike Kestner  <mkestner@ximian.com>
+
 	* sample/gconf/* : break System.Drawing dependency.
 
 2004-04-30  Owen Fraser-Green  <owen@discobabe.net>
